[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Tochi <tochukwuugboajah@gmail.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "stripe>=12.3.0",
    "python-dotenv>=1.1.1",
    "flask-mail>=0.10.0",
    "pytz",
    "gunicorn>=^21.2.0"
]
